feat(retrieval): add exact patent claim fast path